2004-03-27  Todd Berman  <tberman@sevenl.net>

	* Tree/TreeNodeCollection.cs: fix indentation