@@ -25,7 +25,7 @@ namespace MonoDevelop.Gui.Widgets {
 			3 -- Expanded Icon
 			4 -- Unexpanded Icon
 			*/
-			store = new Gtk.TreeStore (typeof (string), typeof (string), typeof (TreeNode), typeof (Gdk.Pixbuf), typeof (Gdk.Pixbuf));
+			store = new Gtk.TreeStore (typeof (string), typeof (Gdk.Pixbuf), typeof (TreeNode), typeof (Gdk.Pixbuf), typeof (Gdk.Pixbuf));
 			this.Model = store;
 			this.canEdit = canEdit;
 
@@ -37,8 +37,7 @@ namespace MonoDevelop.Gui.Widgets {
 
 			Gtk.CellRendererPixbuf pix_render = new Gtk.CellRendererPixbuf ();
 			complete_column.PackStart (pix_render, false);
-			complete_column.AddAttribute (pix_render, "stock_id", 1);
-			pix_render.StockSize = Gtk.IconSize.Menu;
+			complete_column.AddAttribute (pix_render, "pixbuf", 1);
 			// Sadly, gtk+ does not have support for stock being here :-(
 			complete_column.AddAttribute (pix_render, "pixbuf-expander-open", 3);
 			complete_column.AddAttribute (pix_render, "pixbuf-expander-closed", 4);
@@ -160,7 +159,7 @@ namespace MonoDevelop.Gui.Widgets {
 			store.SetValue (it, 2, new_child);
 			
 			if (new_child.Text != null)        store.SetValue (it, 0, new_child.Text);
-			if (new_child.Image != null)       store.SetValue (it, 1, new_child.Image);
+			if (new_child.Image != null)       store.SetValue (it, 1, RenderIcon (new_child.Image));
 			if (new_child.OpenedImage != null) store.SetValue (it, 3, RenderIcon (new_child.OpenedImage));
 			if (new_child.ClosedImage != null) store.SetValue (it, 4, RenderIcon (new_child.ClosedImage));
 			
@@ -185,7 +184,7 @@ namespace MonoDevelop.Gui.Widgets {
 			store.SetValue (it, 2, new_child);
 			
 			if (new_child.Text != null)        store.SetValue (it, 0, new_child.Text);
-			if (new_child.Image != null)       store.SetValue (it, 1, new_child.Image);
+			if (new_child.Image != null)       store.SetValue (it, 1, RenderIcon (new_child.Image));
 			if (new_child.OpenedImage != null) store.SetValue (it, 3, RenderIcon (new_child.OpenedImage));
 			if (new_child.ClosedImage != null) store.SetValue (it, 4, RenderIcon (new_child.ClosedImage));
 			
